--- a/salv.html
+++ b/salv.html
@@ -1,10 +1,13 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="salv.css" media="all">
 
 <title>Salv</title>
 	<head>
-		<div class="shining"><h1>YGOPro Salvation Development</div>
+		<div class="shining">
+		<h1>
+		<span class="title">Salvation</span> Development</h1>
+		</div>
 	</head>
 	<body>
 	
