--- a/salv.html
+++ b/salv.html
@@ -6,10 +6,12 @@
 	<head>
 		<div class="shining">
 		<h1>
-		<span class="title">Salvation</span> Development</h1>
+		<span class="title">Salvation</span> Development
+		</h1>
 		</div>
 	</head>
 	<body>
 	
 	</body>
+	
 </html>
