--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <link rel="stylesheet" type="text/css" href="salv.css" media="all">
 
-<title>Salv</title>
+<title>Salvation Development</title>
 	<head>
 		<div class="shining">
 		<h1>
 		<span class="title">Salvation</span> Development
 		</h1>
+		</div>
+		<div class="links">
+		<a href="" style="text-decoration:none">About</a> /
+		<a href="" style="text-decoration:none">Work</a> /
+		<a href="" style="text-decoration:none">Contact</a>
 		</div>
 	</head>
 	<body>
