--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		</h1>
 		</div>
 		<div class="links">
-		<a href="" style="text-decoration:none">About</a> /
-		<a href="" style="text-decoration:none">Work</a> /
-		<a href="" style="text-decoration:none">Contact</a>
+		<a href="" style="text-decoration:none; background-decoration:none">About</a> /
+		<a href="" style="text-decoration:none; background-decoration:none">Work</a> /
+		<a href="" style="text-decoration:none; background-decoration:none">Contact</a>
 		</div>
 	</head>
 	<body>
