--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 <title>Salvation Development</title>
 	<head>
 		<div class="shining">
-		<h1>
-		<span class="title">Salvation</span> Development
-		</h1>
+			<h1>
+			<span class="title">Salvation</span> Development
+			</h1>
 		</div>
 		<div class="links">
-		<a href="" style="text-decoration:none; background-decoration:none">About</a> /
-		<a href="" style="text-decoration:none; background-decoration:none">Work</a> /
-		<a href="" style="text-decoration:none; background-decoration:none">Contact</a>
+			<a href="" style="text-decoration:none; background-decoration:none">About</a> /
+			<a href="" style="text-decoration:none; background-decoration:none">Work</a> /
+			<a href="" style="text-decoration:none; background-decoration:none">Contact</a>
+		</div>
+		<div class="quote">
+			"<b>I have never met a fresh college grad who was ready</b> to start contributing productively to an app development team fresh out of school. Not once in five years that I’ve been actively interviewing candidates." 
 		</div>
 	</head>
 	<body>
