--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 <title>Salvation Development</title>
-	<head>
-		<div class="shining">
-			<h1>
-			<span class="title">Salvation</span> Development
-			</h1>
-		</div>
-		<div class="quote">
+	<body>
+        <div class="top">
+		  <div class="shining">
+			 <h1>
+			 <span class="title">Salvation</span> Development
+			 </h1>
+		  </div>
+		  <div class="quote">
 			"<b>I have never met a fresh college grad who was ready</b> to start contributing productively to an app development team fresh out of school. Not once in five years that I’ve been actively interviewing candidates." 
-		</div>
-		<div class="links">
+		  </div>
+		  <div class="links">
 			<a href="" style="text-decoration:none; background-decoration:none">About</a> /
 			<a href="" style="text-decoration:none; background-decoration:none">Work</a> /
 			<a href="" style="text-decoration:none; background-decoration:none">Contact</a>
-		</div>
-	</head>
-	<body>
+		  </div>
+        </div>
+        <div class="midtop">
+        </div>
+        <div class="midbot">
+        </div>
+        <div class="bot">
+        </div>
+	</body>
+</html>
 	
 	</body>
 	
